style.css
/*Style HTML*/
html {
    height: 100%;
    width: 100%;
    background-color: #f2f7f5;
    color: #004643;
}
  
/*Style Everything*/
* {
    padding: 0;
    margin: 0;
}
  
/*Style Page Content*/
.content {
    margin-top: 80px;
    width: 90%;
    margin-right: auto;
    margin-left: auto;
}
  
/*Style Header Text*/
h1, h2, h3 {
    color: #00473e;
    font-family: "Schibsted Grotesk", sans-serif;
    margin-bottom: 10px;
}
  
/*Style Paragraph Text*/
p {
    color: #00332c;
    font-family: "Schibsted Grotesk", sans-serif;
}
  
/*Style Bullet Point Lists*/
ul {
    margin-left: 30px;
}
  
li {
    color: #00332c;
    font-family: "Schibsted Grotesk", sans-serif;
}
  
/*Style Paragaph Header Text*/
.paragraphHeader {
    font-weight: bold;
    font-style: normal;
    color: #00473E;
}
  
/*Style Links*/
a {
    color: #fa5246;
}

/*Style Links on Hover*/
a:hover {
    color: #F61606;
}
  
/*Style Nav Bar*/
.navBar {
    position: fixed;
    overflow: hidden;
    background-color: #f2f7f5;
    top: 0;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 10px 0px;
    border-bottom: 0.5px solid #00473e;
    z-index: 1;
}
  
/*Style Nav Bar Links*/
.navBar a {
    float: left;
    display: block;
    color: #00473e;
    background-color: #f2f7f5;
    text-align: center;
    font-weight: bold;
    text-transform: uppercase;
    margin: 0px 10px;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
    font-family: "Schibsted Grotesk", sans-serif;
}
  
/*Style Nav Bar Icon*/
.navBar .icon {
    display: none; 
    background-color: #f2f7f5;
    color: #00473e;
}
  
/*Style Nav Bar to be Responsive*/
@media screen and (max-width: 600px) {
    .navBar a:not(:first-child) {
        display: none;
    }

    .navBar a.icon {
        float: right;
        display: block;
    }
}
  
@media screen and (max-width: 600px) {
    .navBar.responsive {
        position: sticky;
    }

    .navBar.responsive .icon {
        position: absolute;
        right: 0;
        top: 0;
    }

    .navBar.responsive a {
        float: none;
        display: block;
        text-align: left;
    }
}
  
/*Remove Margin Between Nav Bar and First Image*/
@media screen and (max-width: 600px) {
    .navBar {
        margin-bottom: -45px;
        display: block;
    }

    #home {
        background-color: #f2f7f5;
        color: #00473e;
    }
}
  
/*Style Nav Bar Hover Underline Animation*/
.hoverUnderlineAnimation {
    display: inline-block;
    position: relative;
}
  
.hoverUnderlineAnimation:after {
    content: '';
    position: absolute;
    width: 100%;
    transform: scaleX(0);
    height: 3px;
    bottom: 0;
    left: 0;
    background-color: #FA5246;
    transform-origin: bottom center;
    transition: transform 0.25s ease-out;
}
  
.hoverUnderlineAnimation:hover:after {
    transform: scaleX(1);
    transform-origin: bottom center;
}
  
/*Style Home Image*/
#homeImage {
    border-radius: 50%;
    width: 45%;
    height: auto;
    border: 5px solid #fa5246;
    margin-right: auto;
    margin-left: auto;
    display: block;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}
  
/*Style Image Gallery Flex Box*/
/*Style Image Gallery Container*/
.galleryContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row; 
    flex-wrap: wrap;
}
  
/*Style Image Gallery Images*/
.galleryImage {
    margin: 10px;
    height: 175px;
    width: auto;
    border-radius: 5px;
}

@media screen and (max-width: 600px) {
    .galleryImage {
        margin: 10px;
        width: 100px;
        height: 100px;
        object-fit: cover;
        object-position: center center;
    }
}
  
/*Style Scroll Div*/
.scrollDiv {
    background-color: #DDEAE5;
    border: 3px solid #00473e;
    border-radius: 10px;
    max-height: 375px;
    max-width: 500px;
    overflow-y: auto;
    justify-content: center;
    align-items: center;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}
  
/*Style Scroll Div Images*/
.scrollDiv img {
    width: auto;
    height: 175px;
    margin-right: auto;
    margin-left: auto;
    display: block;
}
  
/*Style Scroll Div Paragraph Text*/
.scrollDiv p {
    color: #00332c;
    text-align: center;
    font-family: "Schibsted Grotesk", sans-serif;
    margin-right: 5%;
    margin-left: 5%;
}
  
/*Style Side By Side Divs*/
.sideBySide {
    margin: 0%;
    width: 100%;
    height: auto;
    display: inline-flex;
    padding: 0px;
    justify-content: center;
    margin-top: -1px;
    align-items: center;
}
  
/*Style Side By Side Elements*/
.sideBySideElement {
    width: 45%;
    height: auto;
    align-items: center;
}

.sideBySideElementRight {
    margin-left: auto;
}

.sideBySideElementLeft {
    margin-right: auto;
}
  
/*Style Videos in Side By Side Elements*/
.sideBySideElement iframe {
    display: block;
    margin-right: auto;
    margin-left: auto;
    width: 75%;
    min-height: 225px;
}
  
/*Style Side By Side Divs to be Responsive*/
@media screen and (max-width: 1000px) {
    .sideBySide {
        display: flex;
        flex-wrap: wrap;
        flex-direction: column;
    }
  
    .sideBySideElement {
        width: 100%;
    }

    .sideBySideElementLeft, .sideBySideElementRight {
        margin-right: auto;
        margin-left: auto;
        display: block;
    }
}

/*Footer*/
.footer {
    width: 100%;
    margin: 0px;
    padding: 20px 0px;
    text-align: center;
    bottom: 0;
    border-top: 0.5px solid #00473e;
    margin-top: 10px;
}

/*Footer Copyright Text*/
.footer p {
    color: #00332c;
    font-family: "Schibsted Grotesk", sans-serif;
    font-weight: 500;
    padding-right: 20px;
    padding-left: 20px;
    text-align: center;
}

/*Footer Social Media Logos/Links*/
.footer i {
    font-size: 30px; 
    color: #00473E;
    margin: 0px 10px;
}

.footer i:hover {
    font-size: 30px; 
    color: #FA5246;
}

.divider {
    border-bottom: 0.5px solid #00473e;
    margin: 40px 0px;
}

.languagesAndTools {
    display: flex;
    flex-wrap: wrap;
    margin-left: -5px;
    margin-top: 10px;
}

/*Style Project Sections*/
.project {
    box-sizing: border-box;
    height: auto;
    display: inline-flex;
    justify-content: space-between;
    align-items: center;
    background-color: #DDEAE5;
    border: 3px solid #00473E;
    border-radius: 10px;
    padding: 20px;
    margin-bottom: 20px;
    width: 100%;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

/*Style Project Image Subsections*/
.projectImage {
    min-width: 15%;
    height: auto;
    align-items: center;
    margin-right: auto;
    margin-left: auto;
    float: right;
}

/*Style Project Images*/
.projectImage img {
    width: 165px;
    height: auto;
    margin-left: 20px;
    border-radius: 5px;
    float: right;
}

/*Style Project Info Subsections*/
.projectInfo {
    min-width: 85%;
    height: auto;
    align-items: center;
    margin-right: auto;
    margin-left: auto;
    float: left;
}

.textOnly .projectInfo {
    width: 100%;
}

.projectInfo p {
    font-family: "Schibsted Grotesk", sans-serif;
    color: #00332c;
}

.projectInfo .paragraphHeader {
    font-family: "Schibsted Grotesk", sans-serif;
    color: #00473E;
    font-size: 22px;
}

/*Style Projects to be Responsive*/
@media screen and (max-width: 800px) {
    .project {
        flex-wrap: wrap;
        flex-direction: column;
    }

    .projectImage, .projectInfo {
        width: 100%;
    }
  
    .projectImage img {
        width: 50%;
        height: auto;
        margin: 20px;
        margin-bottom: 0px;
        margin-right: auto;
        margin-left: auto;
        display: block;
        float: none;
    }
}

.languagesAndTools p {
    font-family: "Schibsted Grotesk", sans-serif;
    background-color: #00473E;
    color: #f2f7f5;
    margin: 5px;
    padding: 5px 10px;
    border-radius: 5px;
    width: auto;
    font-size: 11px;
}

